tests/ui/parser/deli-ident-issue-2.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/deli-ident-issue-2.rs:5:1
   |
LL | fn main() {
   |           - this opening brace...
...
LL |     }
   |     - ...matches this closing brace
LL | }
   | ^ unexpected closing delimiter

error: mismatched closing delimiter: `]`
  --> $DIR/deli-ident-issue-2.rs:2:14
   |
LL |     if 1 < 2 {
   |              ^ unclosed delimiter
LL |         let _a = vec!];
   |                      ^ mismatched closing delimiter

error: aborting due to 2 previous errors

